<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>MainWindow</class>
 <widget class="QMainWindow" name="MainWindow">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>960</width>
    <height>548</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Convert3D User Interface (itksnap.org)</string>
  </property>
  <widget class="QWidget" name="centralwidget">
   <layout class="QVBoxLayout" name="verticalLayout" stretch="0,0,1,0,1,0">
    <property name="rightMargin">
     <number>12</number>
    </property>
    <property name="bottomMargin">
     <number>0</number>
    </property>
    <item>
     <widget class="QFrame" name="frame">
      <property name="frameShape">
       <enum>QFrame::NoFrame</enum>
      </property>
      <property name="frameShadow">
       <enum>QFrame::Raised</enum>
      </property>
      <layout class="QHBoxLayout" name="horizontalLayout">
       <property name="margin">
        <number>0</number>
       </property>
       <item>
        <widget class="QLabel" name="label">
         <property name="text">
          <string>Working Directory:</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QLineEdit" name="inWorkDir">
         <property name="readOnly">
          <bool>true</bool>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QToolButton" name="btnChangeDir">
         <property name="text">
          <string>...</string>
         </property>
         <property name="icon">
          <iconset theme="window-new">
           <normaloff/>
          </iconset>
         </property>
        </widget>
       </item>
      </layout>
     </widget>
    </item>
    <item>
     <widget class="QLabel" name="label_2">
      <property name="text">
       <string>C3D Command</string>
      </property>
     </widget>
    </item>
    <item>
     <widget class="CommandEditor" name="teCommand">
      <property name="font">
       <font>
        <family>Courier</family>
        <pointsize>12</pointsize>
       </font>
      </property>
     </widget>
    </item>
    <item>
     <widget class="QLabel" name="label_3">
      <property name="text">
       <string>Output:</string>
      </property>
     </widget>
    </item>
    <item>
     <widget class="QPlainTextEdit" name="teOutput"/>
    </item>
    <item>
     <widget class="QWidget" name="widget" native="true">
      <layout class="QHBoxLayout" name="horizontalLayout_2">
       <item>
        <spacer name="horizontalSpacer">
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
         </property>
         <property name="sizeHint" stdset="0">
          <size>
           <width>40</width>
           <height>20</height>
          </size>
         </property>
        </spacer>
       </item>
       <item>
        <widget class="QPushButton" name="btnRun">
         <property name="text">
          <string>Execute</string>
         </property>
         <property name="shortcut">
          <string>Shift+Return, Ctrl+S, Ctrl+Y</string>
         </property>
        </widget>
       </item>
      </layout>
     </widget>
    </item>
   </layout>
  </widget>
  <widget class="QMenuBar" name="menubar">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>960</width>
     <height>22</height>
    </rect>
   </property>
  </widget>
  <widget class="QStatusBar" name="statusbar"/>
 </widget>
 <customwidgets>
  <customwidget>
   <class>CommandEditor</class>
   <extends>QTextEdit</extends>
   <header location="global">CommandEditor.h</header>
  </customwidget>
 </customwidgets>
 <tabstops>
  <tabstop>teCommand</tabstop>
  <tabstop>btnRun</tabstop>
  <tabstop>inWorkDir</tabstop>
  <tabstop>btnChangeDir</tabstop>
  <tabstop>teOutput</tabstop>
 </tabstops>
 <resources/>
 <connections/>
</ui>
